// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsScreen component Should render the settings screen without crashing with english locale 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "marginTop": 30,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "margin": 5,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Settings
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 5,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#929292",
          "fontSize": 16,
        }
      }
    >
      Language
      :
    </Text>
    <View
      style={
        Object {
          "height": 40,
          "paddingLeft": 20,
          "width": 200,
        }
      }
    >
      <RCTPicker
        items={
          Array [
            Object {
              "label": "English",
              "textColor": undefined,
              "value": "en",
            },
            Object {
              "label": "Français",
              "textColor": undefined,
              "value": "fr",
            },
          ]
        }
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        selectedIndex={0}
        style={
          Array [
            Object {
              "height": 216,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "margin": 5,
        },
        Object {
          "bottom": 0,
          "paddingBottom": 30,
          "position": "absolute",
          "width": "100%",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#dcdcdc",
          "textAlign": "center",
        }
      }
    >
      v1.2.0
    </Text>
  </View>
</View>
`;

exports[`SettingsScreen component Should render the settings screen without crashing with french locale 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "marginTop": 30,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "margin": 5,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      Paramètres
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 5,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#929292",
          "fontSize": 16,
        }
      }
    >
      Langue
      :
    </Text>
    <View
      style={
        Object {
          "height": 40,
          "paddingLeft": 20,
          "width": 200,
        }
      }
    >
      <RCTPicker
        items={
          Array [
            Object {
              "label": "English",
              "textColor": undefined,
              "value": "en",
            },
            Object {
              "label": "Français",
              "textColor": undefined,
              "value": "fr",
            },
          ]
        }
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        selectedIndex={1}
        style={
          Array [
            Object {
              "height": 216,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "margin": 5,
        },
        Object {
          "bottom": 0,
          "paddingBottom": 30,
          "position": "absolute",
          "width": "100%",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#dcdcdc",
          "textAlign": "center",
        }
      }
    >
      v1.2.0
    </Text>
  </View>
</View>
`;
